# mp4-

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/esp_hosted/host/drivers/transport/sdio/: sdio_drv.c
components/esp_lvgl_port/: esp_lvgl_port.c
components/esphome__micro-decoder/: .component_hash  CHECKSUMS.json  CMakeLists.txt  idf_component.yml
components/esphome__micro-decoder/cmake/: esp-idf.cmake
components/esphome__micro-decoder/docs/: INTEGRATION.md
components/esphome__micro-decoder/include/micro_decoder/: decoder_source.h  types.h
components/esphome__micro-decoder/src/: audio_decoder.cpp  audio_reader.cpp  audio_reader.h  decoder_source.cpp
components/esphome__micro-decoder/src/esp/: http_client.cpp
components/esphome__micro-decoder/src/host/: http_client.cpp
components/esphome__micro-decoder/src/platform/: http_client.h
components/espressif__esp_codec_dev/: CMakeLists.txt
components/lvgl/: lv_conf.h
components/lvgl/demos/widgets/: lv_demo_widgets.c
main/: CMakeLists.txt  config.h  es8311_code.h  es8311_codec.c  idf_component.yml  lcd.c  lcd.h  lvgl_demo.c  lvgl_demo.h  main.c  mjpeg_player.c  mjpeg_player.h  sd.c  sd.h  ui_envent.c  ui_envent.h  wifi.c  wifi.h
main/historyfl/: history_today.c  history_today.h
main/memo/: memo.c  memo.h
main/music/: MP3.cpp  MP3.h  gecilrc.c  gecilrc.h  mp3_cover.c  mp3_cover.h  mp3_duration.c  mp3_duration.h  progress_seek.c  progress_seek.h
main/time/: ntp.c  ntp.h  time_ui.c  time_ui.h
main/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h
main/ui/fonts/: ui_font_Font2.c  ui_font_Font3.c  ui_font_Font4.c  ui_font_Font5.c
main/ui/images/: ui_img_1256964955.c  ui_img_1515518950.c  ui_img_1650588022.c  ui_img_1772208564.c  ui_img_1794949695.c  ui_img_1840017345.c  ui_img_1889690653.c  ui_img_191345099.c  ui_img_1953031374.c  ui_img_2051629593.c  ui_img_2_png.c  ui_img_46488613.c  ui_img_545021016.c  ui_img_701658425.c  ui_img_843332074.c  ui_img_bf1_png.c  ui_img_shangyishou_png.c  ui_img_shunxu_png.c  ui_img_suiji_png.c  ui_img_tech_music_background_800x480_png.c  ui_img_vinyl_record_256_png.c  ui_img_wifioffoutlined_png.c  ui_img_xiayige_png.c  ui_img_yl_png.c
main/ui/screens/: ui_musicui.c  ui_musicui.h  ui_timeui.c  ui_timeui.h
main/usb_extend_screen/: README.md  tusb_config.h  usb_extend_descriptors.c  usb_extend_display.c  usb_extend_frame.c  usb_extend_hid.c  usb_extend_hid.h  usb_extend_hid_descriptor.h  usb_extend_screen.c  usb_extend_screen.h  usb_extend_screen_internal.h  usb_extend_screen_ui.c  usb_extend_screen_ui.h  usb_extend_usb.c  usb_extend_vendor.c
main/weatherfl/: weather.c  weather.h
