SET(SOURCES screens/ui_musicui.c
    screens/ui_timeui.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_bf1_png.c
    images/ui_img_xiayige_png.c
    images/ui_img_2_png.c
    images/ui_img_yl_png.c
    images/ui_img_shunxu_png.c
    images/ui_img_1515518950.c
    images/ui_img_wifioffoutlined_png.c
    images/ui_img_1794949695.c
    images/ui_img_191345099.c
    images/ui_img_vinyl_record_256_png.c
    images/ui_img_1953031374.c
    images/ui_img_1650588022.c
    images/ui_img_843332074.c
    images/ui_img_545021016.c
    images/ui_img_1256964955.c
    images/ui_img_shangyishou_png.c
    images/ui_img_suiji_png.c
    images/ui_img_1230129726.c
    images/ui_img_2051629593.c
    images/ui_img_1772208564.c
    images/ui_img_1840017345.c
    images/ui_img_1889690653.c
    images/ui_img_701658425.c
    images/ui_img_46488613.c
    images/ui_img_tech_music_background_800x480_png.c
    fonts/ui_font_Font1.c
    fonts/ui_font_Font2.c
    fonts/ui_font_Font3.c
    fonts/ui_font_Font4.c
    fonts/ui_font_Font5.c)

add_library(ui ${SOURCES})
